docs(schema): updated descriptions.
